--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title> WALLSCRIPT </title>
-        <link rel="icon" type="image/x-icon" href="C:/Users/USER/Downloads/WSIconFinal.png">
+        <link rel="icon" type="image/x-icon" href="WSIconFinal.png">
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
@@ -23,7 +23,7 @@
             and the boundless power of words!</p>
     </div>
     <div class="centerbutton">
-        <button onclick="window.location.href='C:/Users/USER/OneDrive/Documents/BSCS - Files/INTROTOCOMP/FINALWEBSITE/write_home.html'" 
+        <button onclick="window.location.href='write_home.html'" 
         class="indextohomebutt"> WRITE! </button>
 
     </div>
