write_home.html

--- a/write_home.html
+++ b/write_home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WALLSCRIPT | WRITE!</title>
-    <link rel="icon" type="image/x-icon" href="C:/Users/USER/Downloads/WSIconFinal.png">
+    <link rel="icon" type="image/x-icon" href="WSIconFinal.png">
     <link rel="stylesheet" href="write_home.css">
     <script src="write_home.js"></script>
 </head>
@@ -13,9 +13,9 @@
     <header> 
         <h1>WRITE ON WALLSCRIPT!</h1>
         <nav>
-            <a href="C:/Users/USER/OneDrive/Documents/BSCS - Files/INTROTOCOMP/FINALWEBSITE/index.html">HOME</a>
-            <a href="C:/Users/USER/OneDrive/Documents/BSCS - Files/INTROTOCOMP/FINALWEBSITE/wall_page.html">WALL</a>
-            <a href="C:/Users/USER/OneDrive/Documents/BSCS - Files/INTROTOCOMP/FINALWEBSITE/about_us.html">ABOUT US</a>
+            <a href="index.html">HOME</a>
+            <a href="wall_page.html">WALL</a>
+            <a href="about_us.html">ABOUT US</a>
         </nav>
     </header>
 <div id="windowContainer">
@@ -38,7 +38,7 @@
     <footer> 
         <h1>ALL RIGHTS RESERVED.</h1>
         <nav>
-            <a href="C:/Users/USER/OneDrive/Documents/BSCS - Files/INTROTOCOMP/FINALWEBSITE/about_us.html">FIND OUT MORE ABOUT US!</a>
+            <a href="about_us.html">FIND OUT MORE ABOUT US!</a>
         </nav>
     </footer>
 </body>
