--- a/wall_page.html
+++ b/wall_page.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WALLSCRIPT | WALL</title>
-    <link rel="icon" type="image/x-icon" href="C:/Users/USER/Downloads/WSIconFinal.png">
+    <link rel="icon" type="image/x-icon" href="WSIconFinal.png">
     <link rel="stylesheet" href="wall_page.css">
     <script src="wall_page.js"></script>
 </head>
@@ -14,9 +14,9 @@
         <header> 
             <h1>WRITE ON WALLSCRIPT!</h1>
             <nav>
-                <a href="C:/Users/USER/OneDrive/Documents/BSCS - Files/INTROTOCOMP/FINALWEBSITE/index.html">HOME</a>
-                <a href="C:/Users/USER/OneDrive/Documents/BSCS - Files/INTROTOCOMP/FINALWEBSITE/write_home.html">WRITE</a>
-                <a href="C:/Users/USER/OneDrive/Documents/BSCS - Files/INTROTOCOMP/FINALWEBSITE/about_us.html">ABOUT US</a>
+                <a href="index.html">HOME</a>
+                <a href="write_home.html">WRITE</a>
+                <a href="about_us.html">ABOUT US</a>
             </nav>
         </header>
         <div class="container">
@@ -28,7 +28,7 @@
         <footer> 
             <h1>ALL RIGHTS RESERVED.</h1>
             <nav>
-                <a href="C:/Users/USER/OneDrive/Documents/BSCS - Files/INTROTOCOMP/FINALWEBSITE/about_us.html">FIND OUT MORE ABOUT US!</a>
+                <a href="about_us.html">FIND OUT MORE ABOUT US!</a>
             </nav>
         </footer>
 </body>
