--- a/about_us.html
+++ b/about_us.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WALLSCRIPT | ABOUT US</title>
-    <link rel="icon" type="image/x-icon" href="C:/Users/USER/Downloads/WSIconFinal.png">
+    <link rel="icon" type="image/x-icon" href="WSIconFinal.png">
     <link rel="stylesheet" href="about_us.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
@@ -13,13 +13,13 @@
     <header> 
         <h1>WRITE ON WALLSCRIPT!</h1>
         <nav>
-            <a href="C:/Users/USER/OneDrive/Documents/BSCS - Files/INTROTOCOMP/FINALWEBSITE/index.html">HOME</a>
-            <a href="C:/Users/USER/OneDrive/Documents/BSCS - Files/INTROTOCOMP/FINALWEBSITE/write_home.html">WRITE</a>
-            <a href="C:/Users/USER/OneDrive/Documents/BSCS - Files/INTROTOCOMP/FINALWEBSITE/wall_page.html">WALL</a>
+            <a href="index.html">HOME</a>
+            <a href="write_home.html">WRITE</a>
+            <a href="wall_page.html">WALL</a>
         </nav>
     </header>
     <div class="image">
-        <img src="C:/Users/USER/Downloads/ken.png">
+        <img src="ken.png">
       </div>
     <div class="introduction">
         <h1>MEET THE DEVELOPER!</h1>
@@ -44,7 +44,7 @@
     <footer> 
         <h1>ALL RIGHTS RESERVED.</h1>
         <nav>
-            <a href="C:/Users/USER/OneDrive/Documents/BSCS - Files/INTROTOCOMP/FINALWEBSITE/wall_page.html">SEE MORE ON WALL!</a>
+            <a href="wall_page.html">SEE MORE ON WALL!</a>
         </nav>
     </footer>
 </body>
